# FlyMon

./: .gitignore  Makefile  README.md  common.py  flymon_compiler.py  requirements.txt  setup.sh  tmu_config.json  zlog-cfg-cur
control_plane/: README.md  cmu_group.py  task.py  (+11 more)
simulations/: .gitignore  CMakeLists.txt  README.md  simple_test.py  test_all.py  test_bloomfilter.py  test_cardinality.py  test_flow_entropy.py  test_heavyhitter.py  test_max_table.py
simulations/data/: README.md
simulations/include/: BeauCoup.h  CMHeap.h  CMSketch.h  CommonFunc.h  CountHeap.h  Csver.h  DataTrace.h  EMFSD.h  ES_HeavyPart.h  ES_LightPart.h  ES_Params.h  ES_Sketch.h  IpAddress.h  MRAC.h  MeasurementNode.h  Packet.h  StageFly.h  StreamAlgorithm.h  TracePacket.h  TraceReceiver.h  TraceSender.h  UnivMon.h  d-left-stop.h  insertable_iblt.h
simulations/include/tbc/: p4.h  tbc.h  tbc_common.h  tbc_manager.h  tbc_resource_mgr.h
simulations/lib/BOBHash/: BOBHash32.cpp  BOBHash32.h
simulations/lib/CRCHash/: CRC.cpp  CRC.h
simulations/lib/CuckooHash/: cuckoo_hashing.cpp  cuckoo_hashing.h
simulations/lib/HowLog/: HowLog.cpp  HowLog.h
simulations/pytest/: beaucoup_calc.py  beaucoup_opt.py  beaucoup_opt2.py  beaucoup_opt3.py  beaucoup_opt_final.py  result.txt  tmu_beaucoup_opt.py  z3_kinematic.py  z3_soduku.py  z3_test.py  z3_tmus.py
simulations/result/cardinality/: hyperloglog.csv
simulations/result/ddos/: beaucoup_d1.csv  beaucoup_d3.csv  flymon_beaucoup_1d.csv
simulations/result/entropy/: flymon_mrac.csv
simulations/result/existence/: bloom_with_optmi.csv  bloom_without_optmi.csv
simulations/result/heavyhitter/: beaucoup_1d.csv  flymon_beaucoup_1d.csv  flymon_cmsketch3d.csv  flymon_sumax3d.csv
simulations/result/heavyhitter_prob/: cm_sketch_prob.csv
simulations/result/max_interval_time/: sumax_d2.csv  sumax_d3.csv
simulations/result_snapshot/cardinality/: beaucoup.csv  hyperloglog.csv
simulations/result_snapshot/ddos/: beaucoup_d1.csv  beaucoup_d3.csv  flymon_beaucoup_1d.csv  flymon_beaucoup_3d.csv
simulations/result_snapshot/entropy/: flymon_mrac.csv  univmon.csv
simulations/result_snapshot/existence/: bloom_with_optmi.csv  bloom_without_optmi.csv
simulations/result_snapshot/heavyhitter/: beaucoup_1d.csv  flymon_beaucoup_1d.csv  flymon_beaucoup_3d.csv  flymon_cmsketch3d.csv  flymon_sumax3d.csv  univmon.csv
simulations/result_snapshot/heavyhitter_prob/: cm_sketch_prob.csv
simulations/result_snapshot/max_interval_time/: sumax_d2.csv  sumax_d3.csv
simulations/result_snapshot_sample/cardinality/: beaucoup.csv  hyperloglog.csv
simulations/result_snapshot_sample/ddos/: beaucoup_d1.csv  beaucoup_d3.csv  flymon_beaucoup_1d.csv  flymon_beaucoup_3d.csv
simulations/result_snapshot_sample/entropy/: flymon_mrac.csv  univmon.csv
simulations/result_snapshot_sample/existence/: bloom_with_optmi.csv  bloom_without_optmi.csv
simulations/result_snapshot_sample/heavyhitter/: beaucoup_1d.csv  flymon_beaucoup_1d.csv  flymon_beaucoup_3d.csv  flymon_cmsketch3d.csv  flymon_sumax3d.csv  univmon.csv
simulations/result_snapshot_sample/heavyhitter_prob/: cm_sketch_prob.csv
simulations/result_snapshot_sample/max_interval_time/: sumax_d2.csv  sumax_d3.csv
simulations/results/ddos/: flymon_beaucoup_3d.csv
simulations/results/heavyhitter/: univmon.csv
simulations/scripts/: test_cardinality.py  test_ddosvictim.py
simulations/src/CMHeap/: CMHeap.cpp
simulations/src/CMSketch/: CMSketch.cpp
simulations/src/Common/: CommonFunc.cpp  DataTrace.cpp  IpAddress.cpp  Packet.cpp  TracePacket.cpp
simulations/src/ElasticSketch/: ElasticSketch.cpp  HeavyPart.cpp  LightPart.cpp
simulations/src/TBC/: tbc.cpp
simulations/test/BEAUCOUP/: test_beaucoup.cpp  test_beaucoup_cardinality.cpp_template  test_beaucoup_ddos.cpp_template  test_beaucoup_heavyhitter.cpp_template
simulations/test/CMHeap/: cmheap.cpp
simulations/test/CMSketch/: cm_interchange_test.cpp.bck  test_cmsketch.cpp  test_cmsketch.cpp_template
simulations/test/ElasticSketch/: essketch.cpp  essketch8.cpp.bck
simulations/test/MRAC/: test_mrac.cpp
simulations/test/NetworkTest/: networktest.cpp
simulations/test/SECONDARY_HASH/: test_secondary_hash_ipsrc.bck  test_secondary_hash_port.cpp.bck  test_xor_hash.cpp
simulations/test/TBC_BEAUCOUP_DDOS/: test_tbc_beaucoup_ddos.cpp  test_tbc_beaucoup_ddos.cpp_template
simulations/test/TBC_BEAUCOUP_HH/: test_tbc_beaucoup_hh.cpp  test_tbc_beaucoup_hh.cpp_template
simulations/test/TBC_BLOOMFILTER/: test_tbc_bloomfilter.cpp  test_tbc_bloomfilter.cpp_template
simulations/test/TBC_BLOOMFILTER_WO_OPTM/: test_tbc_bloomfilter_wo_optm.cpp  test_tbc_bloomfilter_wo_optm.cpp_template
simulations/test/TBC_CARDINALITY/: test_tbc_cardinality.cpp  test_tbc_cardinality.cpp_template
simulations/test/TBC_CMSketch/: tbc_cmsketch.cpp.bak  tbc_cmsketch.cpp.bck  tbc_cmsketch_dis.txt  test_tbc_cmsketch.cpp  test_tbc_cmsketch.cpp_template
simulations/test/TBC_CMSketch_Prob/: test_tbc_cmsketch_prob.cpp  test_tbc_cmsketch_prob.cpp_template
simulations/test/TBC_CUSketch/: tbc_cusketch.cpp.bak  tbc_cusketch.cpp.bbcak  test_tbc_cusketch.cpp  test_tbc_cusketch.cpp_template
simulations/test/TBC_DISTRIBUTION/: test_tbc_distribution.cpp
simulations/test/TBC_HYPERLOGLOG/: read_flow_distribution.bck  test_tbc_hyperloglog.cpp  test_tbc_hyperloglog.cpp.bck  test_tbc_hyperloglog_good-turing.cpp.bck
simulations/test/TBC_MAX_TABLE/: test_tbc_max_table.cpp  test_tbc_max_table.cpp_template
simulations/test/TBC_MEM_TEST/: test_tbc_mem_test.cpp
simulations/test/TBC_MRAC/: test_tbc_mrac.cpp  test_tbc_mrac.cpp_template
simulations/test/TBC_MRAC_HLL/: tbc_test_tbc_mrac_hll.cpp  test_tbc_mrac_hll.cpp.bak  test_tbc_mrac_hll.cpp_template
simulations/test/TEST_TBC_DDOS_VICTIM/: tbc_test_tbc_ddos_victim.cpp.realbck  test_tbc_ddos_victim.cpp  test_tbc_ddos_victim.cpp_template
simulations/test/UnivMon/: test_univmon.cpp
simulations/test/UnivMon_Entropy/: test_univmon_entropy.cpp  test_univmon_entropy.cpp_template
simulations/test/UnivMon_HH/: test_univmon_hh.cpp  test_univmon_hh.cpp_template
(+55 files in other folders)
